[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprite/switchD.png" type="Texture" id=1]
[ext_resource path="res://sprite/switch.png" type="Texture" id=2]
[ext_resource path="res://scripts/Widerstand.gd" type="Script" id=3]
[ext_resource path="res://fonts/kranky/Kranky.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sprite/a3/unit.png" type="Texture" id=5]
[ext_resource path="res://sprite/close.png" type="Texture" id=6]
[ext_resource path="res://sprite/standard.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=12]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=18]
size = 70
font_data = ExtResource( 4 )

[node name="Widerstand" type="Node2D"]
script = ExtResource( 3 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 300, 199 )
texture = ExtResource( 7 )

[node name="title" type="Label" parent="."]
margin_left = 54.0
margin_top = 3.0
margin_right = 545.0
margin_bottom = 49.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Farbringe und Widerstandsgröße"

[node name="colors" type="Node2D" parent="."]

[node name="one" type="Sprite" parent="colors"]
position = Vector2( 50, 330 )

[node name="two" type="Sprite" parent="colors"]
position = Vector2( 100, 330 )

[node name="three" type="Sprite" parent="colors"]
position = Vector2( 150, 330 )

[node name="four" type="Sprite" parent="colors"]
position = Vector2( 200, 330 )

[node name="one" type="Node2D" parent="."]

[node name="upS" type="Sprite" parent="one"]
position = Vector2( 50, 300 )
texture = ExtResource( 2 )

[node name="up" type="Control" parent="one/upS"]
margin_left = -17.0
margin_top = -15.0
margin_right = 18.0
margin_bottom = 10.0

[node name="dowS" type="Sprite" parent="one"]
position = Vector2( 50, 360 )
texture = ExtResource( 1 )

[node name="do" type="Control" parent="one/dowS"]
margin_left = -18.0
margin_top = -13.0
margin_right = 17.0
margin_bottom = 12.0

[node name="two" type="Node2D" parent="."]

[node name="upS" type="Sprite" parent="two"]
position = Vector2( 100, 300 )
texture = ExtResource( 2 )

[node name="up2" type="Control" parent="two/upS"]
margin_left = -17.0
margin_top = -15.0
margin_right = 18.0
margin_bottom = 10.0

[node name="dowS" type="Sprite" parent="two"]
position = Vector2( 100, 360 )
texture = ExtResource( 1 )

[node name="do2" type="Control" parent="two/dowS"]
margin_left = -18.0
margin_top = -13.0
margin_right = 17.0
margin_bottom = 12.0

[node name="three" type="Node2D" parent="."]

[node name="upS" type="Sprite" parent="three"]
position = Vector2( 150, 300 )
texture = ExtResource( 2 )

[node name="up3" type="Control" parent="three/upS"]
margin_left = -16.0
margin_top = -15.0
margin_right = 19.0
margin_bottom = 10.0

[node name="dowS" type="Sprite" parent="three"]
position = Vector2( 150, 360 )
texture = ExtResource( 1 )

[node name="do3" type="Control" parent="three/dowS"]
margin_left = -18.0
margin_top = -13.0
margin_right = 17.0
margin_bottom = 12.0

[node name="four" type="Node2D" parent="."]

[node name="upS" type="Sprite" parent="four"]
position = Vector2( 200, 300 )
texture = ExtResource( 2 )

[node name="up4" type="Control" parent="four/upS"]
margin_left = -15.0
margin_top = -15.0
margin_right = 20.0
margin_bottom = 10.0

[node name="dowS" type="Sprite" parent="four"]
position = Vector2( 200, 360 )
texture = ExtResource( 1 )

[node name="do4" type="Control" parent="four/dowS"]
margin_left = -18.0
margin_top = -13.0
margin_right = 17.0
margin_bottom = 12.0

[node name="digits" type="Node2D" parent="."]

[node name="oneD" type="Sprite" parent="digits"]
position = Vector2( 300, 330 )

[node name="twoD" type="Sprite" parent="digits"]
position = Vector2( 350, 330 )

[node name="threeD" type="Sprite" parent="digits"]
position = Vector2( 400, 330 )

[node name="fourD" type="Sprite" parent="digits"]
position = Vector2( 450, 330 )

[node name="one2" type="Node2D" parent="."]

[node name="upS" type="Sprite" parent="one2"]
position = Vector2( 300, 300 )
texture = ExtResource( 2 )

[node name="upD" type="Control" parent="one2/upS"]
margin_left = -17.0
margin_top = -13.0
margin_right = 18.0
margin_bottom = 12.0

[node name="dowS" type="Sprite" parent="one2"]
position = Vector2( 300, 360 )
texture = ExtResource( 1 )

[node name="doD" type="Control" parent="one2/dowS"]
margin_left = -17.0
margin_top = -15.0
margin_right = 18.0
margin_bottom = 10.0

[node name="two2" type="Node2D" parent="."]

[node name="upS" type="Sprite" parent="two2"]
position = Vector2( 350, 300 )
texture = ExtResource( 2 )

[node name="upD2" type="Control" parent="two2/upS"]
margin_left = -17.0
margin_top = -13.0
margin_right = 18.0
margin_bottom = 12.0

[node name="dowS" type="Sprite" parent="two2"]
position = Vector2( 350, 360 )
texture = ExtResource( 1 )

[node name="doD2" type="Control" parent="two2/dowS"]
margin_left = -17.0
margin_top = -15.0
margin_right = 18.0
margin_bottom = 10.0

[node name="three2" type="Node2D" parent="."]

[node name="upS" type="Sprite" parent="three2"]
position = Vector2( 400, 300 )
texture = ExtResource( 2 )

[node name="upD3" type="Control" parent="three2/upS"]
margin_left = -17.0
margin_top = -13.0
margin_right = 18.0
margin_bottom = 12.0

[node name="dowS" type="Sprite" parent="three2"]
position = Vector2( 400, 360 )
texture = ExtResource( 1 )

[node name="doD3" type="Control" parent="three2/dowS"]
margin_left = -17.0
margin_top = -15.0
margin_right = 18.0
margin_bottom = 10.0

[node name="four2" type="Node2D" parent="."]

[node name="upS" type="Sprite" parent="four2"]
position = Vector2( 450, 300 )
texture = ExtResource( 2 )

[node name="upD4" type="Control" parent="four2/upS"]
margin_left = -17.0
margin_top = -13.0
margin_right = 18.0
margin_bottom = 12.0

[node name="dowS" type="Sprite" parent="four2"]
position = Vector2( 450, 360 )
texture = ExtResource( 1 )

[node name="doD4" type="Control" parent="four2/dowS"]
margin_left = -17.0
margin_top = -15.0
margin_right = 18.0
margin_bottom = 10.0

[node name="Unit" type="Sprite" parent="."]
position = Vector2( 500, 330 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = 13.0
margin_top = 68.0
margin_right = 578.0
margin_bottom = 264.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "Um die winzigen Widerstände mit dem Widerstandswert in Ohm zu kennzeichnen, gibt es einen internationalen Farbcode mit vier Ringen. Ein Ring ist dabei meistens gold- oder silberfarben; das ist der 5%- bzw. 10%-Toleranzwert. Diesen Ring lege man nach rechts, also nach hinten. Außerdem ist der 1. Farbring sichtbar näher an einer Seite des Widerstandkörpers, also vorne. Der 4-Ring Farbcode wird von links nach rechts in einer Widerstands-Tabelle abgelesen Beachte: Ring 1 mit der Farbe \"schwarz\" gibt es nicht!"
autowrap = true

[node name="ButtonClose" type="Node2D" parent="."]
position = Vector2( 574, 29 )
scale = Vector2( 0.4, 0.4 )

[node name="ButtonSprite" type="Sprite" parent="ButtonClose"]
texture = ExtResource( 6 )

[node name="Buttonlabel" type="Label" parent="ButtonClose/ButtonSprite"]
margin_left = -45.0
margin_top = -45.0
margin_right = 50.0
margin_bottom = 43.0
mouse_filter = 1
custom_fonts/font = SubResource( 18 )
text = "X"
align = 1

[connection signal="gui_input" from="one/upS/up" to="." method="_on_up_gui_input"]
[connection signal="mouse_entered" from="one/upS/up" to="." method="_on_up_mouse_entered"]
[connection signal="mouse_exited" from="one/upS/up" to="." method="_on_up_mouse_exited"]
[connection signal="gui_input" from="one/dowS/do" to="." method="_on_do_gui_input"]
[connection signal="mouse_entered" from="one/dowS/do" to="." method="_on_do_mouse_entered"]
[connection signal="mouse_exited" from="one/dowS/do" to="." method="_on_do_mouse_exited"]
[connection signal="gui_input" from="two/upS/up2" to="." method="_on_up2_gui_input"]
[connection signal="mouse_entered" from="two/upS/up2" to="." method="_on_up2_mouse_entered"]
[connection signal="mouse_exited" from="two/upS/up2" to="." method="_on_up2_mouse_exited"]
[connection signal="gui_input" from="two/dowS/do2" to="." method="_on_do2_gui_input"]
[connection signal="mouse_entered" from="two/dowS/do2" to="." method="_on_do2_mouse_entered"]
[connection signal="mouse_exited" from="two/dowS/do2" to="." method="_on_do2_mouse_exited"]
[connection signal="gui_input" from="three/upS/up3" to="." method="_on_up3_gui_input"]
[connection signal="mouse_entered" from="three/upS/up3" to="." method="_on_up3_mouse_entered"]
[connection signal="mouse_exited" from="three/upS/up3" to="." method="_on_up3_mouse_exited"]
[connection signal="gui_input" from="three/dowS/do3" to="." method="_on_do3_gui_input"]
[connection signal="mouse_entered" from="three/dowS/do3" to="." method="_on_do3_mouse_entered"]
[connection signal="mouse_exited" from="three/dowS/do3" to="." method="_on_do3_mouse_exited"]
[connection signal="gui_input" from="four/upS/up4" to="." method="_on_up4_gui_input"]
[connection signal="mouse_entered" from="four/upS/up4" to="." method="_on_up4_mouse_entered"]
[connection signal="mouse_exited" from="four/upS/up4" to="." method="_on_up4_mouse_exited"]
[connection signal="gui_input" from="four/dowS/do4" to="." method="_on_do4_gui_input"]
[connection signal="mouse_entered" from="four/dowS/do4" to="." method="_on_do4_mouse_entered"]
[connection signal="mouse_exited" from="four/dowS/do4" to="." method="_on_do4_mouse_exited"]
[connection signal="gui_input" from="one2/upS/upD" to="." method="_on_upD_gui_input"]
[connection signal="mouse_entered" from="one2/upS/upD" to="." method="_on_upD_mouse_entered"]
[connection signal="mouse_exited" from="one2/upS/upD" to="." method="_on_upD_mouse_exited"]
[connection signal="gui_input" from="one2/dowS/doD" to="." method="_on_doD_gui_input"]
[connection signal="mouse_entered" from="one2/dowS/doD" to="." method="_on_doD_mouse_entered"]
[connection signal="mouse_exited" from="one2/dowS/doD" to="." method="_on_doD_mouse_exited"]
[connection signal="gui_input" from="two2/upS/upD2" to="." method="_on_up2_gui_input"]
[connection signal="mouse_entered" from="two2/upS/upD2" to="." method="_on_upD2_mouse_entered"]
[connection signal="mouse_exited" from="two2/upS/upD2" to="." method="_on_upD2_mouse_exited"]
[connection signal="gui_input" from="two2/dowS/doD2" to="." method="_on_do2_gui_input"]
[connection signal="mouse_entered" from="two2/dowS/doD2" to="." method="_on_doD2_mouse_entered"]
[connection signal="mouse_exited" from="two2/dowS/doD2" to="." method="_on_doD2_mouse_exited"]
[connection signal="gui_input" from="three2/upS/upD3" to="." method="_on_up3_gui_input"]
[connection signal="mouse_entered" from="three2/upS/upD3" to="." method="_on_upD3_mouse_entered"]
[connection signal="mouse_exited" from="three2/upS/upD3" to="." method="_on_upD3_mouse_exited"]
[connection signal="gui_input" from="three2/dowS/doD3" to="." method="_on_do3_gui_input"]
[connection signal="mouse_entered" from="three2/dowS/doD3" to="." method="_on_doD3_mouse_entered"]
[connection signal="mouse_exited" from="three2/dowS/doD3" to="." method="_on_doD3_mouse_exited"]
[connection signal="gui_input" from="four2/upS/upD4" to="." method="_on_up4_gui_input"]
[connection signal="mouse_entered" from="four2/upS/upD4" to="." method="_on_upD4_mouse_entered"]
[connection signal="mouse_exited" from="four2/upS/upD4" to="." method="_on_upD4_mouse_exited"]
[connection signal="gui_input" from="four2/dowS/doD4" to="." method="_on_do4_gui_input"]
[connection signal="mouse_entered" from="four2/dowS/doD4" to="." method="_on_doD4_mouse_entered"]
[connection signal="mouse_exited" from="four2/dowS/doD4" to="." method="_on_doD4_mouse_exited"]
[connection signal="gui_input" from="ButtonClose/ButtonSprite/Buttonlabel" to="." method="_on_Buttonlabel_gui_input"]
[connection signal="mouse_entered" from="ButtonClose/ButtonSprite/Buttonlabel" to="." method="_on_Buttonlabel_mouse_entered"]
[connection signal="mouse_exited" from="ButtonClose/ButtonSprite/Buttonlabel" to="." method="_on_Buttonlabel_mouse_exited"]
